--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>
       A Simple HTML Page
   </title>
+  <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
     <header class="header">
