Подключение гугл-шрифта

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     A Simple HTML Page
   </title>
   <link rel="stylesheet" href="style.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
